[package]
name = "wlinflate"
version = "0.1.3"
edition = "2021"
authors = ["icon [drew@parker.systems]"]
description = "simple tool to expand a wordlist with prepends, appends, extensions, and substitutions"
readme = "./README.md"
license = "GPL-3.0"
repository = "https://github.com/callrbx/wlinflate"

[lib]
name = "wlinflate"
path = "src/wordlist.rs"

[[bin]]
name = "wlinflate"
path = "src/main.rs"

[dependencies]
ctor = "^0.1.21"
structopt = { version = "^0.3.25", default-features = false }
